Fixed Objects, Add a dynamic sample

--- a/WebSharper.MathJax.Sample/index.html
+++ b/WebSharper.MathJax.Sample/index.html
@@ -12,12 +12,14 @@
     <p>Click on the formulas to zoom in.</p>
 
     <h2>TeX</h2>
+    <div id="tex"></div>
     <p>
         When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
     </p>
     <p>
         $\left [ – \frac{\hbar^2}{2 m} \frac{\partial^2}{\partial x^2} + V \right ] \Psi = i \hbar \frac{\partial}{\partial t} \Psi$
     </p>
+    <button id="btn">TeX</button>
 
     <h2>MathML</h2>
     <p>
