--- a/WebSharper.MathJax.Sample/Content/WebSharper.MathJax.Sample.head.html
+++ b/WebSharper.MathJax.Sample/Content/WebSharper.MathJax.Sample.head.html
@@ -1,3 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js" type="text/javascript" charset="UTF-8">
 
+</script><script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript" charset="UTF-8">
+
 </script>
